# open-dynamic-workflow

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
odw/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
odw/docs/: ARCHITECTURE.md  CLAUDE_CODE_RESEARCH.md  FIRST_USER.md
odw/docs/examples/: codex-json-smoke.input.json  codex-json-smoke.js  fake-pandacode-smoke.js
odw/examples/: 01-single-node.js  02-parallel-fanout.js  03-pipeline-verify.js  04-bamboo-provider.js  05-heterogeneous-models.js  06-build-project.js  07-parallel-review-apply.js  README.md
odw/scripts/: selftest.mjs
odw/skills/odw/: SKILL.md
odw/src/: guide.md  main.rs
odw/src/pack/: mod.rs
odw/src/pack/templates/: contract.md  workflow-api.d.ts
odw/src/pack/templates/claude/: settings.odw.example.json
odw/src/pack/templates/claude/agents/: odw-codex-coder.md  odw-failure-analyst.md  odw-orchestrator.md  odw-researcher.md  odw-security-reviewer.md  odw-synthesizer.md  odw-test-runner.md  odw-verifier.md
odw/src/pack/templates/claude/commands/: odw-audit.md  odw-flow.md  odw-ship.md  odw.md
odw/src/pack/templates/claude/workflows/: odw-audit.js  odw-flow.js  odw-ship.js  (+1 more)
odw/src/pack/templates/odw/: README.md  odw.toml
odw/src/pack/templates/report/: odw-report.mjs
odw/src/pack/templates/runtime/: odw-js-runner.mjs
odw/tests/: parity_selftest.rs
pandacode/: .gitignore  Cargo.toml  LICENSE  README.md
pandacode/docs/: agent-caller-quickstart.md  bamboo-agent-caller-guide.md  bamboo-cache-strategy.md  bamboo-coding-tools.md  bamboo-live.env.example  bamboo-migration-audit.md  bamboo-pricing.cn.json.example  bamboo-verification-matrix.md  cli-surface.html  dogfood-20260602.md
pandacode/prompts/builtin/: bdd-spec-designer.md  codebase-governance.md  fresh-judge.md  harness-verifier.md  implementation-worker.md  orchestrator-base.md  product-ux-taste-designer.md  release-devlog-keeper.md  research-trigger.md  reviewer-red-team.md  tech-architect.md  version-advisor.md  worker-card.md
pandacode/scripts/: smoke-bamboo-live-providers.sh
pandacode/src/: agent.rs  cli.rs  client.rs  config.rs  fx.rs  io.rs  main.rs  models.rs  output.rs  prompt.rs  session.rs
pandacode/src/providers/: anthropic.rs  openai.rs
pandacode/src/runtimes/: bamboo.rs  claude.rs  codex.rs  codex_appserver.rs  mod.rs
pandacode/tests/: fake_runtimes.rs
(+24 files in other folders)
